objects/Role__c.object
<CustomObject>
    <description>Used in Staffing System.
Central holding place for seasonal staff role information.</description>
    <fields>
        <fullName>Allow_SAW_JP_creation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this field, if the Staffing Application Website should create Job Placements for the record type associated with this Role record</inlineHelpText>
        <label>Allow SAW JP creation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>End_day_Autumn__c</fullName>
        <label>End day (Autumn)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PCEnd</fullName>
                </value>
                <value>
                    <fullName>TCEnd</fullName>
                </value>
                <value>
                    <fullName>RCDEnd</fullName>
                </value>
                <value>
                    <fullName>RCAEnd</fullName>
                </value>
                <value>
                    <fullName>Graduation</fullName>
                </value>
                <value>
                    <fullName>RCA1</fullName>
                </value>
                <value>
                    <fullName>RCA2</fullName>
                </value>
                <value>
                    <fullName>RCA3</fullName>
                </value>
                <value>
                    <fullName>RCA4</fullName>
                </value>
                <value>
                    <fullName>Assignment End Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_day_Spring__c</fullName>
        <label>End day (Spring)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PCEnd</fullName>
                </value>
                <value>
                    <fullName>TCEnd</fullName>
                </value>
                <value>
                    <fullName>RCDEnd</fullName>
                </value>
                <value>
                    <fullName>RCAEnd</fullName>
                </value>
                <value>
                    <fullName>Graduation</fullName>
                </value>
                <value>
                    <fullName>RCA1</fullName>
                </value>
                <value>
                    <fullName>RCA2</fullName>
                </value>
                <value>
                    <fullName>RCA3</fullName>
                </value>
                <value>
                    <fullName>RCA4</fullName>
                </value>
                <value>
                    <fullName>Assignment End Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_day__c</fullName>
        <label>End day (Summer)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PCEnd</fullName>
                </value>
                <value>
                    <fullName>TCEnd</fullName>
                </value>
                <value>
                    <fullName>RCDEnd</fullName>
                </value>
                <value>
                    <fullName>RCAEnd</fullName>
                </value>
                <value>
                    <fullName>Graduation</fullName>
                </value>
                <value>
                    <fullName>RCA1</fullName>
                </value>
                <value>
                    <fullName>RCA2</fullName>
                </value>
                <value>
                    <fullName>RCA3</fullName>
                </value>
                <value>
                    <fullName>RCA4</fullName>
                </value>
                <value>
                    <fullName>Assignment End Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_claim_permissions__c</fullName>
        <label>Expense claim permissions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Freeze_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freeze Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ideas_Bible__c</fullName>
        <label>Ideas Bible</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_special_case__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box when role should not create Job Placements in Salesforce</inlineHelpText>
        <label>Is special case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JP_Record_type__c</fullName>
        <description>This should be an exact match of the Job Placement record type for the corresponding role</description>
        <label>JP Record type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_number_of_rest_days__c</fullName>
        <inlineHelpText>This would give us the ability to set the number of days between the end of one role and the start of the next. This could be different from role to role and from year to year.</inlineHelpText>
        <label>Min number of rest days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prog_section_1_End_Date__c</fullName>
        <label>Prog section 1 End Date</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Prog_section_1_Start_Date__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PC End Date</fullName>
                </value>
                <value>
                    <fullName>TC End Date</fullName>
                </value>
                <value>
                    <fullName>RCD End Date</fullName>
                </value>
                <value>
                    <fullName>RCA End Date</fullName>
                </value>
                <value>
                    <fullName>Practitioner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prog_section_1_Start_Date__c</fullName>
        <label>Prog section 1 Start Date</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Prog_section_1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PC Start Date</fullName>
                </value>
                <value>
                    <fullName>TC Start Date</fullName>
                </value>
                <value>
                    <fullName>RCD Start Date</fullName>
                </value>
                <value>
                    <fullName>RCA Start Date</fullName>
                </value>
                <value>
                    <fullName>Practitioner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prog_section_1__c</fullName>
        <label>Prog section 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>TC</fullName>
                </value>
                <value>
                    <fullName>RCD</fullName>
                </value>
                <value>
                    <fullName>RCA</fullName>
                </value>
                <value>
                    <fullName>Practitioner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prog_section_2_End_Date__c</fullName>
        <label>Prog section 2 End Date</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Prog_section_2_Start_Date__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PC End Date</fullName>
                </value>
                <value>
                    <fullName>TC End Date</fullName>
                </value>
                <value>
                    <fullName>RCD End Date</fullName>
                </value>
                <value>
                    <fullName>RCA End Date</fullName>
                </value>
                <value>
                    <fullName>Practitioner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prog_section_2_Start_Date__c</fullName>
        <label>Prog section 2 Start Date</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Prog_section_2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PC Start Date</fullName>
                </value>
                <value>
                    <fullName>TC Start Date</fullName>
                </value>
                <value>
                    <fullName>RCD Start Date</fullName>
                </value>
                <value>
                    <fullName>RCA Start Date</fullName>
                </value>
                <value>
                    <fullName>Practitioner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prog_section_2__c</fullName>
        <label>Prog section 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>TC</fullName>
                </value>
                <value>
                    <fullName>RCD</fullName>
                </value>
                <value>
                    <fullName>RCA</fullName>
                </value>
                <value>
                    <fullName>Practitioner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prog_section_3_End_Date__c</fullName>
        <label>Prog section 3 End Date</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Prog_section_3_Start_Date__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PC End Date</fullName>
                </value>
                <value>
                    <fullName>TC End Date</fullName>
                </value>
                <value>
                    <fullName>RCD End Date</fullName>
                </value>
                <value>
                    <fullName>RCA End Date</fullName>
                </value>
                <value>
                    <fullName>Practitioner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prog_section_3_Start_Date__c</fullName>
        <label>Prog section 3 Start Date</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Prog_section_3__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PC Start Date</fullName>
                </value>
                <value>
                    <fullName>TC Start Date</fullName>
                </value>
                <value>
                    <fullName>RCD Start Date</fullName>
                </value>
                <value>
                    <fullName>RCA Start Date</fullName>
                </value>
                <value>
                    <fullName>Practitioner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prog_section_3__c</fullName>
        <label>Prog section 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>TC</fullName>
                </value>
                <value>
                    <fullName>RCD</fullName>
                </value>
                <value>
                    <fullName>RCA</fullName>
                </value>
                <value>
                    <fullName>Practitioner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Guide__c</fullName>
        <label>Role Guide</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Role_description__c</fullName>
        <label>Role description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role_number__c</fullName>
        <inlineHelpText>Role number is set so that we have flexibility in adding role types to SAW</inlineHelpText>
        <label>Role number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLR__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this a summer-long role?</inlineHelpText>
        <label>SLR?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seasons_role_available_for__c</fullName>
        <label>Season(s) role available for</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Summer</fullName>
                </value>
                <value>
                    <fullName>Autumn</fullName>
                </value>
                <value>
                    <fullName>Spring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_case_1_end__c</fullName>
        <label>Special case 1 end</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_case_1_start__c</fullName>
        <label>Special case 1 start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_case_2_end__c</fullName>
        <label>Special case 2 end</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_case_2_start__c</fullName>
        <label>Special case 2 start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_case_3_end__c</fullName>
        <label>Special case 3 end</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_case_3_start__c</fullName>
        <label>Special case 3 start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_day_Autumn__c</fullName>
        <label>Start day (Autumn)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PCKO</fullName>
                </value>
                <value>
                    <fullName>TCKO</fullName>
                </value>
                <value>
                    <fullName>TCKO+1</fullName>
                </value>
                <value>
                    <fullName>TCKO+2</fullName>
                </value>
                <value>
                    <fullName>RCDKO</fullName>
                </value>
                <value>
                    <fullName>RCA1</fullName>
                </value>
                <value>
                    <fullName>RCA2</fullName>
                </value>
                <value>
                    <fullName>RCA3</fullName>
                </value>
                <value>
                    <fullName>RCA4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_day_Spring__c</fullName>
        <label>Start day (Spring)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PCKO</fullName>
                </value>
                <value>
                    <fullName>TCKO</fullName>
                </value>
                <value>
                    <fullName>TCKO+1</fullName>
                </value>
                <value>
                    <fullName>TCKO+2</fullName>
                </value>
                <value>
                    <fullName>RCDKO</fullName>
                </value>
                <value>
                    <fullName>RCA1</fullName>
                </value>
                <value>
                    <fullName>RCA2</fullName>
                </value>
                <value>
                    <fullName>RCA3</fullName>
                </value>
                <value>
                    <fullName>RCA4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_day__c</fullName>
        <inlineHelpText>The day that people in this role start their work period on the programme</inlineHelpText>
        <label>Start day (Summer)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PCKO</fullName>
                </value>
                <value>
                    <fullName>TCKO</fullName>
                </value>
                <value>
                    <fullName>TCKO+1</fullName>
                </value>
                <value>
                    <fullName>RCDKO</fullName>
                </value>
                <value>
                    <fullName>RCA1</fullName>
                </value>
                <value>
                    <fullName>TCKO+2</fullName>
                </value>
                <value>
                    <fullName>RCA2</fullName>
                </value>
                <value>
                    <fullName>RCA3</fullName>
                </value>
                <value>
                    <fullName>RCA4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_schedule_description__c</fullName>
        <inlineHelpText>This is helptext for the work preferences page of the SAW. This helptext should be a generic explanation of the variations that can occur in the work schedule. This will be especially important for SLRs</inlineHelpText>
        <label>Work schedule description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>work_days__c</fullName>
        <label># work days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Role</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Role_number__c</columns>
        <columns>JP_Record_type__c</columns>
        <columns>Role_description__c</columns>
        <columns>Allow_SAW_JP_creation__c</columns>
        <filterScope>Everything</filterScope>
        <label>*All</label>
    </listViews>
    <listViews>
        <fullName>X2014_RCA_Grad_records</fullName>
        <columns>NAME</columns>
        <columns>Role_Guide__c</columns>
        <columns>Ideas_Bible__c</columns>
        <columns>Contract__c</columns>
        <columns>Role_description__c</columns>
        <columns>Allow_SAW_JP_creation__c</columns>
        <columns>JP_Record_type__c</columns>
        <columns>Role_number__c</columns>
        <columns>Min_number_of_rest_days__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Role__c.X2014</value>
        </filters>
        <filters>
            <field>JP_Record_type__c</field>
            <operation>contains</operation>
            <value>RCA,Grad</value>
        </filters>
        <label>2014 RCA/Grad records</label>
    </listViews>
    <listViews>
        <fullName>X2014_wave_records</fullName>
        <columns>NAME</columns>
        <columns>Role_Guide__c</columns>
        <columns>Ideas_Bible__c</columns>
        <columns>Contract__c</columns>
        <columns>Role_description__c</columns>
        <columns>Allow_SAW_JP_creation__c</columns>
        <columns>JP_Record_type__c</columns>
        <columns>Role_number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Role__c.X2014</value>
        </filters>
        <label>2014 wave records</label>
    </listViews>
    <listViews>
        <fullName>X2015_Roles</fullName>
        <columns>Start_day__c</columns>
        <columns>End_day__c</columns>
        <columns>NAME</columns>
        <columns>Prog_section_1_Start_Date__c</columns>
        <columns>Prog_section_1_End_Date__c</columns>
        <columns>Prog_section_2_End_Date__c</columns>
        <columns>Prog_section_2_Start_Date__c</columns>
        <columns>Prog_section_3_End_Date__c</columns>
        <columns>Prog_section_3_Start_Date__c</columns>
        <columns>Prog_section_4_End_Date__c</columns>
        <columns>Prog_section_4_Start_Date__c</columns>
        <columns>Allow_SAW_JP_creation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Role__c.X2015</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>a2E</value>
        </filters>
        <label>2015 Roles</label>
    </listViews>
    <listViews>
        <fullName>X2016_Roles_Prog_Sections_Update</fullName>
        <columns>NAME</columns>
        <columns>Start_day__c</columns>
        <columns>End_day__c</columns>
        <columns>Min_number_of_rest_days__c</columns>
        <columns>Prog_section_1__c</columns>
        <columns>Prog_section_1_Start_Date__c</columns>
        <columns>Prog_section_1_End_Date__c</columns>
        <columns>Prog_section_2__c</columns>
        <columns>Prog_section_2_Start_Date__c</columns>
        <columns>Prog_section_2_End_Date__c</columns>
        <columns>Prog_section_3__c</columns>
        <columns>Prog_section_3_Start_Date__c</columns>
        <columns>Prog_section_3_End_Date__c</columns>
        <columns>Prog_section_4__c</columns>
        <columns>Prog_section_4_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Role__c.X2016</value>
        </filters>
        <label>2016 Roles Prog Sections Update</label>
    </listViews>
    <listViews>
        <fullName>X2016_Roles_and_IDs</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>JP_Record_type__c</columns>
        <columns>Role_number__c</columns>
        <columns>Start_day__c</columns>
        <columns>End_day__c</columns>
        <columns>Start_day_Autumn__c</columns>
        <columns>End_day_Autumn__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Role__c.X2016</value>
        </filters>
        <label>2016 Roles and IDs</label>
    </listViews>
    <nameField>
        <label>Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roles</pluralLabel>
    <recordTypes>
        <fullName>X2014</fullName>
        <active>true</active>
        <label>2014</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2015</fullName>
        <active>true</active>
        <label>2015</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2016</fullName>
        <active>true</active>
        <label>2016</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>